# kdeconnect-windows

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  README.md  main.cpp
app/: CMakeLists.txt  app_debug.cpp  app_debug.h  application.cpp  application.h  contactprovider.cpp  contactprovider.h  devicemanager.cpp  devicemanager.h  devicepairnotify.cpp  devicepairnotify.h  kdeconnect.qrc  kdeconnect.rc  language.cpp  language.h  main.cpp  runcommandsetuplistener.cpp  runcommandsetuplistener.h  smshelper.cpp  smshelper.h  smsitemdata.h  smsmanager.cpp  smsmanager.h  uicommon.h
app/plugin/: batterypluginwrapper.cpp  batterypluginwrapper.h  clipboardpluginwrapper.cpp  clipboardpluginwrapper.h  contactspluginwrapper.cpp  contactspluginwrapper.h  findmyphonepluginwrapper.cpp  findmyphonepluginwrapper.h  mprisremotepluginwrapper.cpp  mprisremotepluginwrapper.h  pingpluginwrapper.cpp  pingpluginwrapper.h  pluginwrapperbase.cpp  pluginwrapperbase.h  remotecommandspluginwrapper.cpp  remotecommandspluginwrapper.h  remotekeyboardpluginwrapper.cpp  remotekeyboardpluginwrapper.h  remotemousepadpluginwrapper.cpp  remotemousepadpluginwrapper.h  remotesystemvolumepluginwrapper.cpp  remotesystemvolumepluginwrapper.h  runcommandpluginwrapper.cpp  runcommandpluginwrapper.h  sftppluginwrapper.cpp  sftppluginwrapper.h  sharepluginwrapper.cpp  sharepluginwrapper.h  smspluginwrapper.cpp  smspluginwrapper.h
app/qml/: Main.qml  Settings.qml
app/ui/: devicelistmodel.cpp  devicelistmodel.h  devicewindow.cpp  devicewindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginsettings.ui  smsattachmentlistwidget.cpp  smsattachmentlistwidget.h  smscontentitem.cpp  smscontentitem.h  smscontentitem.ui  smsconversationcontentwidget.cpp  smsconversationcontentwidget.h  smsconversationcontentwidget.ui  smsconversationlistitemdelegate.cpp  smsconversationlistitemdelegate.h  smsconversationlistmodel.cpp  smsconversationlistmodel.h  smsconversationswidget.cpp  smsconversationswidget.h  smslistitemsortfilterproxymodel.cpp  smslistitemsortfilterproxymodel.h  smstextbrowser.cpp  smstextbrowser.h  smswidget.ui  smswindow.cpp  smswindow.h  smswindow.ui  textlayoututils.cpp  textlayoututils.h  uicommon.h
core/: CMakeLists.txt  atexitmanager.h  closure.h  core_debug.cpp  core_debug.h  daemon.cpp  daemon.h  dbushelper.cpp  dbushelper.h  device.cpp  device.h  deviceextras.cpp  deviceextras.h  deviceinfo.h  imageutil.cpp  imageutil.h  jsonutils.cpp  jsonutils.h  kdeconnectconfig.cpp  kdeconnectconfig.h  kdeconnectcore_export.h  kdeconnectplugin.cpp  kdeconnectplugin.h  kdeconnectpluginconfig.cpp  krandom.cpp  krandom.h  networkpacket.cpp  networkpacket.h  pluginloader.cpp  pluginloader.h
core/backends/: devicelink.cpp  devicelink.h  linkprovider.cpp  linkprovider.h  pairinghandler.cpp  pairinghandler.h
core/locale/: isocodescache.cpp  isocodescache.qrc  kcountry.cpp  kcountry.h
core/plugins/: kdeconnectplugin.cpp  kdeconnectplugin.h  kdeconnectpluginconfig.cpp  kdeconnectpluginconfig.h  pluginfactory.cpp  pluginfactory.h  pluginid.cpp  pluginid.h  pluginloader.cpp  pluginloader.h  pluginmetadata.cpp  pluginmetadata.h
core/sms/: conversationmessage.cpp  conversationmessage.h
core/task/: kdeconnectbufferdownloadtask.cpp  kdeconnectbufferdownloadtask.h  kdeconnectfiledownloadtask.cpp  kdeconnectfiledownloadtask.h  netaction.cpp  netaction.h  peerbufferdownloadtask.cpp  peerbufferdownloadtask.h  peerfiledownloadtask.cpp  peerfiledownloadtask.h  peerfileuploadtask.cpp  peerfileuploadtask.h  peersslsockettask.cpp  peersslsockettask.h  sockettask.cpp  sockettask.h  task.cpp  task.h  taskscheduler.cpp  taskscheduler.h  taskstatus.cpp  taskstatus.h
coreaddons/: CMakeLists.txt  coreaddons_debug.cpp  coreaddons_debug.h
coreaddons/plugin/: pluginfactory.h  pluginmetadata.cpp  pluginmetadata.h
daemon/: CMakeLists.txt  desktopdaemon.cpp  desktopdaemon.h  kdeconnectd.cpp
icons/: CMakeLists.txt  custom_icons.qrc
icons/breeze/: CMakeLists.txt
icons/hicolor/: CMakeLists.txt
interfaces/: CMakeLists.txt  daemondbusinterface.cpp  daemondbusinterface.h  devicedbusinterface.cpp  devicedbusinterface.h  interface_debug.cpp  interface_debug.h
kcodecs/: CMakeLists.txt  kcharsets.cpp  kcodecs_debug.cpp  kcodecs_debug.h
kcontacts/: CMakeLists.txt  address.cpp  addressee.cpp  addresseehelper.cpp  addressformat.cpp  addressformatter.cpp  desktopfile.cpp  desktopfile.h  impp.cpp  kcontacts_debug.cpp  kcontacts_debug.h  key.cpp  phonenumber.cpp  secrecy.cpp  vcardtool.cpp
kcontacts/converter/: ldifconverter.cpp
kcontacts/vcardparser/: vcardparser.cpp
notification/: CMakeLists.txt  notification.cpp  notification.h  notification_debug.cpp  notification_debug.h  notificationmanager.cpp  notificationmanager.h  notificationplugin.h  notifybysnore.cpp  notifybysnore.h  notifyinterface.h
plugins/: CMakeLists.txt
plugins/battery/: CMakeLists.txt  batterymonitor.cpp  batterymonitor.h  batteryplugin-win.cpp  batteryplugin-win.h  kdeconnect_battery.json  plugin_battery_debug.cpp  plugin_battery_debug.h
plugins/clipboard/: CMakeLists.txt  clipboardlistener.cpp  clipboardlistener.h  clipboardplugin.cpp  clipboardplugin.h  kdeconnect_clipboard.json  plugin_clipboard_debug.cpp  plugin_clipboard_debug.h
plugins/contacts/: CMakeLists.txt  contactsdb.cpp  contactsdb.h  contactsplugin.cpp  contactsplugin.h  kdeconnect_contacts.json  plugin_contacts_debug.cpp  plugin_contacts_debug.h
plugins/findmyphone/: CMakeLists.txt  findmyphoneplugin.cpp  findmyphoneplugin.h
plugins/mousepad/: CMakeLists.txt  abstractremoteinput.h  mousepadplugin.cpp  mousepadplugin.h  plugin_mousepad_debug.cpp  plugin_mousepad_debug.h  windowsremoteinput.cpp  windowsremoteinput.h
plugins/mpriscontrol/: CMakeLists.txt  mediaplaybackcontroller.cpp  mediaplaybackcontroller.h  mpriscontrolplugin-win.cpp  mpriscontrolplugin-win.h  plugin_mpriscontrol_debug.cpp  plugin_mpriscontrol_debug.h
plugins/mprisremote/: CMakeLists.txt  albumartcache.cpp  albumartcache.h  albumartdb.cpp  albumartdb.h  albumartdownloadtask.cpp  albumartdownloadtask.h  albumartmanager.h  (+7 more)
(+159 files in other folders)
