add_subdirectory(ping)
add_subdirectory(battery)
add_subdirectory(mprisremote)
add_subdirectory(mpriscontrol)
add_subdirectory(sftp)
add_subdirectory(clipboard)
add_subdirectory(systemvolume)
add_subdirectory(presenter)
add_subdirectory(mousepad)
add_subdirectory(remotecontrol)
add_subdirectory(remotekeyboard)