add_subdirectory(ping)
add_subdirectory(findmyphone)
add_subdirectory(battery)
add_subdirectory(mprisremote)
add_subdirectory(mpriscontrol)
add_subdirectory(sftp)
add_subdirectory(clipboard)
add_subdirectory(systemvolume)
add_subdirectory(presenter)
add_subdirectory(mousepad)
add_subdirectory(remotecontrol)
add_subdirectory(remotekeyboard)
add_subdirectory(telephony)
add_subdirectory(sms)
add_subdirectory(contacts)
add_subdirectory(runcommand)
add_subdirectory(remotecommands)
add_subdirectory(remotesystemvolume)
add_subdirectory(share)
